--- a/assets/style.css
+++ b/assets/style.css
@@ -7,7 +7,7 @@ header {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(255, 255, 255);
     font-size: 50px;
-    font-weight: 300%;
+    font-weight: 400%;
     padding-bottom: 15px;
     padding-top: 15px;
     width: 100%;   
@@ -29,7 +29,8 @@ header {
 h1 {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(255, 255, 255);
-    font-size: 20px;
+    font-size: 30px;
+   
     
 }
 
@@ -38,16 +39,28 @@ h1 {
     padding: 5px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color:white;}
-    p {
-       float:right;
-    }
-
+    img{display: inline-block;
+        vertical-align: top;
+        width: 46%;}
+    p{ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+        font-size: 25px;
+        display: inline-block;
+        width: 46%;
+        @media (max-width: 620px) {
+          width: 100% px;}
+        }
+    
+ 
 .sections {
     background: #6c4b5e;
     padding: 5px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 25px;
     color:white;
-  
+}
+
+.contact{
+    font-size: 25px;
 }
 ul {
     list-style-type: none;
