--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color:  #eff2f1;
+    background-color: #eff2f1;
 }
 
 header {
@@ -10,19 +10,19 @@ header {
     font-weight: 400%;
     padding-bottom: 15px;
     padding-top: 15px;
-    width: 100%;   
+    width: 100%;
     letter-spacing: 15px;
 }
 
 
 .navbar {
-    background-color:#f18f01;
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: #f18f01;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     color: rgb(0, 0, 0);
     font-weight: bold;
-    width:100%;
-    text-align:right;
-    
+    width: 100%;
+    text-align: right;
+
 
 }
 
@@ -32,75 +32,74 @@ h1 {
     font-size: 30px;
 }
 
-.container{
-    color:white;
+.container {
+    color: white;
     padding: 5px;
 }
 
-.about-me{ 
+.about-me {
     background: #6c4b5e;
     padding: 5px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    color:white;}
-    img{display: inline-block;
-        vertical-align: top;
-        width: 46%;}
-    p{ font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 25px;
-        text-align: justify;
-        display: inline-block;
-        width: 46%;
-        @media (max-width: 620px) {
-          width: 100% px;}
-        }
-    h2{
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        background: #6c4b5e;
-        padding: 15px;
-        display:flex;
-    }
- .works{
-    
-        background: #6c4b5e;
-        padding: 5px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 25px;
-        color:rgb(255, 255, 255);
-    }
- 
+    color: white;
+}
 
-    .resume{
-        background: #6c4b5e;
-        padding: 5px;
-        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-        font-size: 25px;
-        color:white;
-        display:inline-flexbox;
+img {
+    display: inline-block;
+    vertical-align: top;
+    width: 46%;
+}
+
+p {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    text-align: justify;
+    display: inline-block;
+    width: 46%;
+
+    @media (max-width: 620px) {
+        width: 100% px;
     }
- 
+}
+
+h2 {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background: #6c4b5e;
+    padding: 15px;
+    display: flex;
+}
+
+.works {
+
+    background: #6c4b5e;
+    padding: 5px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    color: rgb(255, 255, 255);
+}
+
+
+.resume {
+    background: #6c4b5e;
+    padding: 5px;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 25px;
+    color: white;
+    display: inline-flexbox;
+}
+
 .sections {
     background: #6c4b5e;
     padding: 5px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
     font-size: 25px;
-    color:white;
+    color: white;
 }
 
-.contact{
+.contact {
     font-size: 25px;
 }
+
 ul {
     list-style-type: none;
-  }
-
-
-
-
-
-
-
-    
-      
-     
-
-  
+}
